## leaderboard_entry.gd
## æ’è¡Œæ¦œæ¡ç›® UI ç»„ä»¶
extends Control

## æ’è¡Œæ¦œæ•°æ®
var entry_data: Dictionary = {}

## æ’å
var rank: int = 0

## æ˜¯å¦æ˜¯ç©å®¶è‡ªå·±
var is_myself: bool = false

@onready var rank_label: Label = $HBox/RankLabel
@onready var rank_icon: Label = $HBox/RankIcon
@onready var avatar_label: Label = $HBox/AvatarLabel
@onready var name_label: Label = $HBox/VBox/NameLabel
@onready var value_label: Label = $HBox/VBox/ValueLabel

## å‰ä¸‰åæ’åå›¾æ ‡
var rank_icons := {
	1: "ğŸ¥‡",
	2: "ğŸ¥ˆ",
	3: "ğŸ¥‰"
}

func _ready() -> void:
	pass


## è®¾ç½®æ¡ç›®æ•°æ®
func set_entry_data(data: Dictionary) -> void:
	entry_data = data
	rank = data.get("rank", 0)

	# æ£€æŸ¥æ˜¯å¦æ˜¯è‡ªå·±
	var player_id := ""
	if DataManager and DataManager.player_data:
		player_id = DataManager.player_data.id
	is_myself = (data.get("player_id", "") == player_id)

	_update_display()


## æ›´æ–°æ˜¾ç¤º
func _update_display() -> void:
	if entry_data.is_empty():
		return

	# è®¾ç½®æ’å
	if rank_label:
		rank_label.text = "#%d" % rank

	# è®¾ç½®æ’åå›¾æ ‡
	if rank_icon:
		if rank_icons.has(rank):
			rank_icon.text = rank_icons[rank]
			rank_icon.visible = true
			if rank_label:
				rank_label.visible = false
		else:
			rank_icon.visible = false
			if rank_label:
				rank_label.visible = true

	# è®¾ç½®å¤´åƒ
	if avatar_label:
		avatar_label.text = entry_data.get("avatar", "ğŸ‘¤")

	# è®¾ç½®åç§°
	if name_label:
		name_label.text = entry_data.get("username", "Player")

	# è®¾ç½®æ•°å€¼
	if value_label:
		value_label.text = str(entry_data.get("value", 0))

	# å¦‚æœæ˜¯è‡ªå·±ï¼Œé«˜äº®æ˜¾ç¤º
	if is_myself:
		modulate = Color(1.0, 1.0, 0.8)  # æ·¡é»„è‰²é«˜äº®
	else:
		modulate = Color(1.0, 1.0, 1.0)
